# peloton-scraper

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml
.claude/: settings.local.json
src/peloton_cli/: __init__.py  cli.py  config.py
src/peloton_cli/clients/: __init__.py  base.py  geudrik.py  pylotoncycle_client.py  requests_client.py
tests/: conftest.py  test_e2e.py
